--- a/package.json
+++ b/package.json
@@ -60,9 +60,9 @@
             "vite": "6.3.5"
       },
       "scripts": {
-            "predeploy": "npm run build",
-            "deploy": "gh-pages -d build",
             "dev": "vite",
-            "build": "vite build"
+            "build": "vite build",
+            "predeploy": "npm run build",
+            "deploy": "gh-pages -d build"
       }
 }
